feat: studio threejs canvas added

--- a/src/app/studio/page.module.css
+++ b/src/app/studio/page.module.css
@@ -3,4 +3,16 @@
     justify-content: center;
     color: coral;
     font-size: 2rem;
+    margin-bottom: 2rem;
+}
+
+.scene {
+    text-alighn: center;
+    width: 20rem;
+    height: 20rem;
+    margin: 0 auto;
+}
+
+.canvas {
+    background: white;
 }
