--- a/src/app/[locale]/studio/page.module.css
+++ b/src/app/[locale]/studio/page.module.css
@@ -7,9 +7,9 @@
 }
 
 .scene {
-    text-alighn: center;
-    width: 60%;
-    height: 20rem;
+    text-align: center;
+    width: 100%;
+    height: 50rem;
     margin: 0 auto;
 }
 
