--- a/src/app/[locale]/studio/page.module.css
+++ b/src/app/[locale]/studio/page.module.css
@@ -8,8 +8,8 @@
 
 .scene {
     text-align: center;
-    width: 100%;
-    height: 50rem;
+    width: 100vw;
+    height: 100vh;
     margin: 0 auto;
 }
 
