refact: global css color to white

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,14 +15,14 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: white;
   /*background: linear-gradient(
       to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-    */
+transparent,
+rgb(var(--background-end-rgb))
+)
+rgb(var(--background-start-rgb));
+*/
 }
 
 @layer utilities {
